q-a-2/public/css/style.css
/* ------- Important ! Please at least keep the last part of this CSS ----------- */
/* that forces a 9:16 format (portrait) on all contents */


/* Normalize margin and padding to ease elements positioning */
*{
    padding:0;
    margin:0;
    font-family: "Jost";
}

body{
    background-color: black;
    overflow: hidden;   /* to avoid slider bugs on some browsers */
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

#container{
    position: relative; /* for absolute positionning of child elements*/
}

/* -------------- Loader --------------*/
#loader{
    z-index: 2;
    position:absolute;
}

#loader-img{
    top:40%;
    left:40%;
    position: absolute;
}

#loader-text{
    text-align: center;
    font-size: 25%;
    position: absolute;
    top:60%;
    width: 100%
}
/* -------------- End of Loader --------------*/

/* Swiper slider. Need to fill the 9:16 constrained container */
#mySwiper{
    width: 100%;
    height:100%;
    position: absolute;
}

/* white navigation bullets */
.swiper-pagination-bullet-active {
    background-color: white !important;
}

/* the slides and the loader should fill the whole 9:16 zone */
.swiper-wrapper section, #loader{
    background-color: dodgerblue;
    width: 100%;
    height: 100%;
}

/* Pour que la vidéo remplisse son conteneur (elle sera un peu coupée si nécessaire...) */
.vjs-tech { object-fit: cover; }

/* Most of the elements in this demo are absolute positionned with percentages */
#first-slide header{
    text-align: center;
    width: 100%;
    top: 10%;
    position: absolute;
    font-size: 30%;
    z-index: 2;
}

#logo-hyblab{
    text-align: center;
    width: 50%;
    left: 50%;
    top: 50%;
    margin-left:-25%;
    margin-top:calc(-7.5% * 9 / 16 ); /* margins are relative to the element width... :-( */
    position: absolute;
    font-size: 50%;
    z-index: 2;
    cursor: pointer;
}

/* Last slide image is centered */
#img-fini{
    width: 50%;
    left: 50%;
    top: 40%;
    position: absolute;
    margin-left:-25%;
    margin-top:calc(-25% * 9 / 16 ); /* margins are relative to the element width... :-( */
}

/* Footer of last slide is at the bottom and content is centered */
#first-slide footer{
    bottom: 5%;
    position: absolute;
    font-size: 20%;
    text-align: center;
    padding: 0 1em;
}


/* ---------- Positionning of logos on the last slide ----------------- */
/* here we have a contraint on the height of the logos (not the width) */
/* so we cannot use % and use em (which are proportinal to the size of the */
/* slide because of body's font size rule at the beginning of this CSS */
#bandeau {
    padding-top: 3%;
    width:100%;
    height:25%;
    position: absolute;
    bottom: 0;
    background-color: white;
    font-size: 20%;
}

#bandeau li{
    list-style-type: none;
    display: inline-block;
    vertical-align: middle;
    margin: 0 0.5em;
}

#bandeau img{
    height: 1.5em;
}

#bandeau #hyblab{
    margin: 1em auto;
    height: 3em;
    display: block;
}

#bandeau #cc, #bandeau #opensource
{
    height: 1em;
}

#bandeau .stacked{
    display:block;
}

#bandeau ul{
    text-align: center;
    padding: 0 0;
}

#bandeau .institutionnel
{
    height: 2em;
}

#root {
    background-color: white;
}

.button {
    color:white;
    background-color: black;
    border: solid black;
    border-radius: 36px;
    font-size: 4vh;
    font-family: 'Spicy Rice', Arial, Helvetica, sans-serif;
    height: 8vh;
    width: 30vh;
    cursor: pointer;
    position: relative;
    z-index: 100;
}

.button:active {
    color:black;
    background-color: white;
}

.button_white {
    color: black;
    background-color: white;
    border: solid white;
}

.button_white:active {
    color:white;
    background-color: black;
}

.button_disabled {
    opacity: 50%;
    pointer-events: none;
}

.button_disabled:hover {
    cursor: not-allowed;
}

.learn_more {
    color:black;
    background-color: white;
    border: solid black;
    border-radius: 36px;
    font-size: 2.5vh;
    font-weight: bold;
    padding: 1vh 1vh 1vh 3vh;
    font-family: Arial, Helvetica, sans-serif;
    text-decoration: none;
    text-align: center;
}

.learn_more:active {
    color: white;
    background-color: black;
}

.learn_more:active img {
    filter: invert(100%);
}

.learn_more_img {
    height: 3vh;
    padding-left: 2vh;
    vertical-align: middle;
}

@font-face {
    font-family: "Spicy Rice";
    src: url("../font/SpicyRice-Regular.ttf");
}

@font-face {
    font-family: "Jost";
    src: url("../font/Jost.ttf");
}

#root {
    background-color: white;
}

/* ---------- Important media queries for easy responsive content :-) ----------------- */
/* Can be adapted for other ratios that 9:16 or for horizontal content (ex: 16:9) */

/* This media query ensures that we allways will the width of the screen */
/* as long as the screen aspect ratio is below 9:16 */
@media screen and (max-aspect-ratio: 9/16){
    #root{
        /*margin-top: calc((100vh - 100 * 16vw / 9) / 2);*/
        width: 100vw;
        height: 100vh;
        /*height: calc(100 * 16vw / 9);*/
    }

    /* We set a default font size here. It will be the base for all other font sizes */
    /* Here the font size is proportional to display width */
    /*body{
        background-color: white;
    }*/
}

/* This media query ensures that we allways will the height of the screen */
/* as long as the screen aspect ratio is higher than 9:16 */
@media screen and (min-aspect-ratio: 9/16){
    #root{
        margin-left: calc((100vw - 100 * 9vh / 16) / 2);
        width: calc(100 * 9vh / 16);
        height: 100vh;
    }

    /* We set a default font size here. It will be the base for all other font sizes */
    /* Here the font size is proportional to display height */
    /*body{
        font-size: 12vh;
    }*/
}

.header {
    width: 100%;
    padding: 0 5%;
    box-sizing: border-box;
}
/* ... */

